--- a/Caronae/Base.lproj/Main.storyboard
+++ b/Caronae/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Grf-xD-SWT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Grf-xD-SWT">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -1633,6 +1633,32 @@ Este é o token gerado através da Intranet UFRJ</string>
             </objects>
             <point key="canvasLocation" x="4380" y="-565"/>
         </scene>
+        <!--Histórico-->
+        <scene sceneID="1WW-W3-O3d">
+            <objects>
+                <tableViewController id="Gvm-Bo-rik" customClass="RidesHistoryViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="V13-p9-ST4">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Ride Cell" id="0Qc-z6-Mtu">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0Qc-z6-Mtu" id="jZD-Cs-Vsm">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Gvm-Bo-rik" id="8Kz-Ki-NzZ"/>
+                            <outlet property="delegate" destination="Gvm-Bo-rik" id="5bk-Ea-Hzl"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Histórico" id="geR-VK-1Za"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="m5U-oa-23T" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2628" y="1499"/>
+        </scene>
         <!--Meu Perfil-->
         <scene sceneID="aoM-mI-f82">
             <objects>
@@ -2638,7 +2664,8 @@ Este é o token gerado através da Intranet UFRJ</string>
                                         <exclude reference="rtV-71-yGf"/>
                                     </mask>
                                 </variation>
-                                <variation key="widthClass=compact">
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="0.0" y="64" width="400" height="592"/>
                                     <mask key="constraints">
                                         <include reference="Kiw-qC-kJK"/>
                                         <include reference="T1v-DT-0Ay"/>
@@ -2704,7 +2731,7 @@ Este é o token gerado através da Intranet UFRJ</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oZM-Tm-9ns" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2628" y="1499"/>
+            <point key="canvasLocation" x="3510" y="1533"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Nh4-Y4-Uii">
@@ -2721,7 +2748,7 @@ Este é o token gerado através da Intranet UFRJ</string>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nl6-Le-rtv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3393" y="1499"/>
+            <point key="canvasLocation" x="4275" y="1533"/>
         </scene>
         <!--Editar Perfil-->
         <scene sceneID="mad-LY-Xsb">
@@ -4275,7 +4302,7 @@ Este é o token gerado através da Intranet UFRJ</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ssv-9e-mXa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4203" y="1499"/>
+            <point key="canvasLocation" x="5085" y="1533"/>
         </scene>
         <!--Menu-->
         <scene sceneID="8xb-bu-pIx">
@@ -4449,6 +4476,9 @@ Este é o token gerado através da Intranet UFRJ</string>
                                             <color key="titleColor" red="0.33725491166114807" green="0.33725491166114807" blue="0.34509804844856262" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="Gvm-Bo-rik" kind="show" id="SlU-x6-piJ"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JSu-Rx-2OT">
                                         <rect key="frame" x="20" y="125" width="360" height="30"/>
@@ -6339,17 +6369,17 @@ Este é o token gerado através da Intranet UFRJ</string>
                                                 <exclude reference="DcQ-Df-dgu"/>
                                             </mask>
                                             <mask key="constraints">
-                                                <exclude reference="2Mx-35-wWx"/>
-                                                <exclude reference="sdE-cC-tSr"/>
-                                                <exclude reference="xN5-zu-3PQ"/>
-                                                <exclude reference="JA9-UH-9mb"/>
-                                                <exclude reference="JYZ-5q-yqO"/>
-                                                <exclude reference="WUz-nn-a2g"/>
                                                 <exclude reference="0Jp-0Y-D5U"/>
                                                 <exclude reference="3lM-Yu-sYi"/>
                                                 <exclude reference="582-h6-8ID"/>
                                                 <exclude reference="ZKr-Mc-L7p"/>
                                                 <exclude reference="z96-VO-l6I"/>
+                                                <exclude reference="JA9-UH-9mb"/>
+                                                <exclude reference="JYZ-5q-yqO"/>
+                                                <exclude reference="WUz-nn-a2g"/>
+                                                <exclude reference="2Mx-35-wWx"/>
+                                                <exclude reference="sdE-cC-tSr"/>
+                                                <exclude reference="xN5-zu-3PQ"/>
                                                 <exclude reference="AbH-tb-2Yx"/>
                                                 <exclude reference="Bxx-nw-jgx"/>
                                                 <exclude reference="OvA-jd-4pH"/>
@@ -6362,17 +6392,17 @@ Este é o token gerado através da Intranet UFRJ</string>
                                                 <include reference="DcQ-Df-dgu"/>
                                             </mask>
                                             <mask key="constraints">
-                                                <include reference="2Mx-35-wWx"/>
-                                                <include reference="sdE-cC-tSr"/>
-                                                <include reference="xN5-zu-3PQ"/>
-                                                <include reference="JA9-UH-9mb"/>
-                                                <include reference="JYZ-5q-yqO"/>
-                                                <include reference="WUz-nn-a2g"/>
                                                 <include reference="0Jp-0Y-D5U"/>
                                                 <include reference="3lM-Yu-sYi"/>
                                                 <exclude reference="582-h6-8ID"/>
                                                 <include reference="ZKr-Mc-L7p"/>
                                                 <include reference="z96-VO-l6I"/>
+                                                <include reference="JA9-UH-9mb"/>
+                                                <include reference="JYZ-5q-yqO"/>
+                                                <include reference="WUz-nn-a2g"/>
+                                                <include reference="2Mx-35-wWx"/>
+                                                <include reference="sdE-cC-tSr"/>
+                                                <include reference="xN5-zu-3PQ"/>
                                                 <include reference="AbH-tb-2Yx"/>
                                                 <exclude reference="Bxx-nw-jgx"/>
                                                 <include reference="OvA-jd-4pH"/>
@@ -6665,11 +6695,11 @@ Este é o token gerado através da Intranet UFRJ</string>
         <image name="menu4" width="25" height="26"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="H8O-Mc-OH3"/>
-        <segue reference="TRe-kz-qy8"/>
-        <segue reference="VGz-uS-yQa"/>
-        <segue reference="9kE-zS-Odm"/>
+        <segue reference="iap-vV-xAI"/>
+        <segue reference="kXd-xG-sw3"/>
         <segue reference="7VR-Dw-svl"/>
+        <segue reference="AOI-Sr-h8h"/>
+        <segue reference="tug-g2-rGR"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.33725491169999999" green="0.33725491169999999" blue="0.34509804840000002" alpha="1" colorSpace="calibratedRGB"/>
 </document>
